--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/support": "^5.6",
-        "laravelcollective/html": "^5.6",
-        "illuminate/translation": "^5.6",
+        "illuminate/support": "5.7.*",
+        "laravelcollective/html": "5.7.*",
+        "illuminate/translation": "5.7.*",
         "doctrine/dbal": "~2.6",
         "symfony/finder": "~4.0"
     },
